--- a/index.html
+++ b/index.html
@@ -3021,7 +3021,7 @@ Para se recuperar eventuais problemas com TIME OUT nas requisições, recomendam
 <p><strong>REGRAS DA TOKENIZAÇÃO:</strong></p>
 
 <ul>
-<li><strong>Disponível somente para adquirente Cielo.</strong></li>
+<li><strong>Disponível somente para adquirente Cielo e Rede.</strong></li>
 <li>Cada código de token é único por estabelecimento comercial. Se o mesmo cartão for “tokenizado” para outro estabelecimento, este terá um token diferente.</li>
 <li>Caso um estabelecimento envie duas ou mais vezes para gravar os mesmos dados de cartão, será retornado sempre o mesmo token.</li>
 <li>Não há garantia que o cartão gravado terá todas as suas transações autorizadas, pois são processos independentes e distintos.</li>
