--- a/index.html
+++ b/index.html
@@ -2242,7 +2242,7 @@ Para se recuperar eventuais problemas com TIME OUT nas requisições, recomendam
 <pre class="highlight shell"><code></code></pre>
 
 
-<h1 id="cancelamento-parcial">Cancelamento Parcial</h1>
+<h1 id="cancelamento">Cancelamento Parcial</h1>
 
 <p>Para realizar um cancelamento &ldquo;estorno&rdquo; parcial, deve-se observar as seguintes condições:</p>
 
