Status intenção cancelada.

--- a/index.html
+++ b/index.html
@@ -3934,9 +3934,13 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
 <td style="text-align: center">11</td>
 <td>FALHA NA COMUNICAÇÃO COM FORNECEDOR</td>
 </tr>
+<tr>
+<td style="text-align: center">12</td>
+<td>INTENCAO CANCELADA</td>
+</tr>
 </tbody></table>
 
-          <h1 id="http-status-code">HTTP Status Code</h1>
+<h1 id="http-status-code">HTTP Status Code</h1>
 
 <table><thead>
 <tr>
