Adicionado tipo dos status.

--- a/index.html
+++ b/index.html
@@ -4115,59 +4115,73 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
 <tr>
 <th style="text-align: center">CÓDIGO</th>
 <th>DESCRIÇÃO</th>
+<th>TIPO DE STATUS</th>
 </tr>
 </thead><tbody>
 <tr>
 <td style="text-align: center">0</td>
 <td>TRANSACAO INICIADA</td>
+<td>Transitório</td>
 </tr>
 <tr>
 <td style="text-align: center">1</td>
 <td>AGUARDANDO PAGAMENTO</td>
+<td>Transitório</td>
 </tr>
 <tr>
 <td style="text-align: center">2</td>
 <td>EFETIVADA</td>
+<td>Transitório</td>
 </tr>
 <tr>
 <td style="text-align: center">3</td>
 <td>EM ANALISE</td>
+<td>Transitório</td>
 </tr>
 <tr>
 <td style="text-align: center">4</td>
 <td>EXPIRADA</td>
+<td>Definitivo</td>
 </tr>
 <tr>
 <td style="text-align: center">5</td>
 <td>AUTORIZADA</td>
+<td>Transitório</td>
 </tr>
 <tr>
 <td style="text-align: center">6</td>
 <td>CONFIRMADA</td>
+<td>Definitivo</td>
 </tr>
 <tr>
 <td style="text-align: center">7</td>
 <td>NEGADA</td>
+<td>Definitivo</td>
 </tr>
 <tr>
 <td style="text-align: center">8</td>
 <td>CANCELAMENTO EM ANDAMENTO</td>
+<td>Transitório</td>
 </tr>
 <tr>
 <td style="text-align: center">9</td>
 <td>CANCELADA</td>
+<td>Definitivo</td>
 </tr>
 <tr>
 <td style="text-align: center">10</td>
 <td>PENDENTE DE CONFIRMAÇÃO</td>
+<td>Transitório</td>
 </tr>
 <tr>
 <td style="text-align: center">11</td>
 <td>FALHA NA COMUNICAÇÃO COM FORNECEDOR</td>
+<td>Definitivo</td>
 </tr>
 <tr>
 <td style="text-align: center">12</td>
 <td>INTENCAO CANCELADA</td>
+<td>Definitivo</td>
 </tr>
 </tbody></table>
 
