Adicionado a informação de obrigatóriedade apenas para clientes de sub.

--- a/index.html
+++ b/index.html
@@ -1870,21 +1870,21 @@ Para se recuperar eventuais problemas com TIME OUT nas requisições, recomendam
 <td style="text-align: center">Texto</td>
 <td style="text-align: center">100</td>
 <td style="text-align: center">Sim</td>
-<td>Nome do portador do cartão.</td>
+<td>Nome do pagador.</td>
 </tr>
 <tr>
 <td><code class="prettyprint">customer.document</code></td>
 <td style="text-align: center">Texto</td>
 <td style="text-align: center">18</td>
 <td style="text-align: center">Sim</td>
-<td>Número do CPF/CNPJ do portador do cartão.</td>
+<td>Número do CPF/CNPJ do pagador.</td>
 </tr>
 <tr>
 <td><code class="prettyprint">customer.email</code></td>
 <td style="text-align: center">Texto</td>
 <td style="text-align: center">100</td>
 <td style="text-align: center">Sim</td>
-<td>Email do portador do cartão.</td>
+<td>Email do pagador.<br><strong>Campo obrigatório apenas para clientes de sub</strong>.</td>
 </tr>
 <tr>
 <td><code class="prettyprint">address.address</code></td>
@@ -2210,21 +2210,21 @@ Para se recuperar eventuais problemas com TIME OUT nas requisições, recomendam
 <td style="text-align: center">Texto</td>
 <td style="text-align: center">100</td>
 <td style="text-align: center">Sim</td>
-<td>Nome do portador do cartão.</td>
+<td>Nome do pagador.</td>
 </tr>
 <tr>
 <td><code class="prettyprint">customer.document</code></td>
 <td style="text-align: center">Texto</td>
 <td style="text-align: center">18</td>
 <td style="text-align: center">Sim</td>
-<td>Número do CPF/CNPJ do portador do cartão.</td>
+<td>Número do CPF/CNPJ do pagador.</td>
 </tr>
 <tr>
 <td><code class="prettyprint">customer.email</code></td>
 <td style="text-align: center">Texto</td>
 <td style="text-align: center">100</td>
 <td style="text-align: center">Sim</td>
-<td>Email do portador do cartão.</td>
+<td>Email do pagador.<br><strong>Campo obrigatório apenas para clientes de sub</strong>.</td>
 </tr>
 <tr>
 <td><code class="prettyprint">address.address</code></td>
