Remover stone da documentação.

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ Nossa equipe de suporte a desenvolvedores não provê suporte para linguagens de
     <li><p><strong>Cielo</strong> 1.5 (Obsoleta) e <code class="prettyprint">3.0</code></p>
     <li><p><strong>Rede</strong> Komerci (Obsoleta), e-Rede Adquirencia (Obsoleta) e <code class="prettyprint">Rede Rest</code></p></li>
     <li><p><strong>GetNet</strong> (Obsoleta) e <code class="prettyprint">GetNet Rest</code></p></li>
-    <li><p><strong>Stone</strong> (Obsoleta)</p></li>
+    <!--<li><p><strong>Stone</strong> (Obsoleta)</p></li>-->
 </ul>
 
 <p><a href="#bandeiras">Bandeiras suportadas</a> </p>
@@ -2636,7 +2636,7 @@ Para se recuperar eventuais problemas com TIME OUT nas requisições, recomendam
 <td><code class="prettyprint">GetNet Rest</code></td>
 <td>Mesmo dia ou D+1</td>
 </tr>
-</tbody></table>
+</tbody></table>n
 
 <p>O cancelamento realizado para o adquirente <b>Rede Rest</b>, segue as seguintes regras:</p>
 
@@ -4737,10 +4737,10 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
 <td>GetNet Rest</td>
 <td>22</td>
 </tr>
-<tr>
+<!--<tr>
 <td>Stone</td>
 <td>22</td>
-</tr>
+</tr>-->
 </tbody></table>
 
 
@@ -4773,10 +4773,10 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
 <td>GetNet</td>
 <td>Rest</td>
 </tr>
-<tr>
+<!--<tr>
 <td>Stone</td>
 <td><strong>Não enviar</strong></td>
-</tr>
+</tr>-->
 </tbody></table>
 
 
@@ -4793,7 +4793,7 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
     <th>Rede Rest</th>
     <th>GetNet</th>
     <th>GetNet Rest</th>
-    <th>Stone</th>
+    <!--<th>Stone</th>-->
 </tr>
 </thead><tbody>
 <tr>
@@ -4803,7 +4803,7 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
     <td><input type="checkbox" checked disabled readonly></td>
     <td><input type="checkbox" checked disabled readonly></td>
     <td><input type="checkbox" checked disabled readonly></td>
-    <td><input type="checkbox" checked disabled readonly></td>
+    <!--<td><input type="checkbox" checked disabled readonly></td>-->
 </tr>
 <tr>
     <td>Mastercard</td>
@@ -4812,7 +4812,7 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
     <td><input type="checkbox" checked disabled readonly></td>
     <td><input type="checkbox" checked disabled readonly></td>
     <td><input type="checkbox" checked disabled readonly></td>
-    <td><input type="checkbox" checked disabled readonly></td>
+    <!--<td><input type="checkbox" checked disabled readonly></td>-->
 </tr>
 <tr>
     <td>Diners Club</td>
@@ -4821,7 +4821,7 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
     <td><input type="checkbox" checked disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
-    <td><input type="checkbox" disabled readonly></td>
+    <!--<td><input type="checkbox" disabled readonly></td>-->
 </tr>
 <tr>
     <td>American Express</td>
@@ -4830,7 +4830,7 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
     <td><input type="checkbox" disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
-    <td><input type="checkbox" disabled readonly></td>
+    <!--<td><input type="checkbox" disabled readonly></td>-->
 </tr>
 <tr>
     <td>Elo</td>
@@ -4839,7 +4839,7 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
     <td><input type="checkbox" checked disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
     <td><input type="checkbox" checked disabled readonly></td>
-    <td><input type="checkbox" checked disabled readonly></td>
+    <!--<td><input type="checkbox" checked disabled readonly></td>-->
 </tr>
 <tr>
     <td>Hipercard</td>
@@ -4848,7 +4848,7 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
     <td><input type="checkbox" checked disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
     <td><input type="checkbox" checked disabled readonly></td>
-    <td><input type="checkbox" checked disabled readonly></td>
+    <!--<td><input type="checkbox" checked disabled readonly></td>-->
 </tr>
 <tr>
     <td>Hiper</td>
@@ -4857,7 +4857,7 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
     <td><input type="checkbox" checked disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
-    <td><input type="checkbox" disabled readonly></td>
+    <!--<td><input type="checkbox" disabled readonly></td>-->
 </tr>
 <tr>
     <td>Aura</td>
@@ -4866,7 +4866,7 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
     <td><input type="checkbox" disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
-    <td><input type="checkbox" disabled readonly></td>
+    <!--<td><input type="checkbox" disabled readonly></td>-->
 </tr>
 <tr>
     <td>Discover</td>
@@ -4875,7 +4875,7 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
     <td><input type="checkbox" disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
-    <td><input type="checkbox" disabled readonly></td>
+    <!--<td><input type="checkbox" disabled readonly></td>-->
 </tr>
 <tr>
     <td>JCB</td>
@@ -4884,7 +4884,7 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
     <td><input type="checkbox" checked disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
-    <td><input type="checkbox" disabled readonly></td>
+    <!--<td><input type="checkbox" disabled readonly></td>-->
 </tr>
 <tr>
     <td>Credz</td>
@@ -4893,7 +4893,7 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
     <td><input type="checkbox" checked disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
-    <td><input type="checkbox" disabled readonly></td>
+    <!--<td><input type="checkbox" disabled readonly></td>-->
 </tr>
 <tr>
     <td>Amex</td>
@@ -4902,7 +4902,7 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
     <td><input type="checkbox" checked disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
     <td><input type="checkbox" checked disabled readonly></td>
-    <td><input type="checkbox" disabled readonly></td>
+    <!--<td><input type="checkbox" disabled readonly></td>-->
 </tr>
 <tr>
     <td>Cabal</td>
@@ -4911,7 +4911,7 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
     <td><input type="checkbox" checked disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
-    <td><input type="checkbox" disabled readonly></td>
+    <!--<td><input type="checkbox" disabled readonly></td>-->
 </tr>
 <tr>
     <td>Sorocred</td>
@@ -4920,7 +4920,7 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
     <td><input type="checkbox" checked disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
-    <td><input type="checkbox" disabled readonly></td>
+    <!--<td><input type="checkbox" disabled readonly></td>-->
 </tr>
 <tr>
     <td>Credsystem</td>
@@ -4929,7 +4929,7 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
     <td><input type="checkbox" checked disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
-    <td><input type="checkbox" disabled readonly></td>
+    <!--<td><input type="checkbox" disabled readonly></td>-->
 </tr>
 <tr>
     <td>Banescard</td>
@@ -4938,7 +4938,7 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
     <td><input type="checkbox" checked disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
-    <td><input type="checkbox" disabled readonly></td>
+    <!--<td><input type="checkbox" disabled readonly></td>-->
 </tr>
 <tr>
     <td>Visa Electron</td>
@@ -4947,7 +4947,7 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
     <td><input type="checkbox" checked disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
     <td><input type="checkbox" checked disabled readonly></td>
-    <td><input type="checkbox" disabled readonly></td>
+    <!--<td><input type="checkbox" disabled readonly></td>-->
 </tr>
 <tr>
     <td>Mastercard Maestro</td>
@@ -4956,7 +4956,7 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
     <td><input type="checkbox" checked disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
     <td><input type="checkbox" checked disabled readonly></td>
-    <td><input type="checkbox" disabled readonly></td>
+    <!--<td><input type="checkbox" disabled readonly></td>-->
 </tr>
 <tr>
     <td>Elo Caixa Econômica Federal</td>
@@ -4965,7 +4965,7 @@ Lembrando que é possível efetuar a consulta em qualquer operação, com a cons
     <td><input type="checkbox" checked disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
     <td><input type="checkbox" disabled readonly></td>
-    <td><input type="checkbox" disabled readonly></td>
+    <!--<td><input type="checkbox" disabled readonly></td>-->
 </tr>
 </tbody></table>
 </div>
